# mjregrasping

./: .gitignore  .gitmodules  CMakeLists.txt  MUJOCO_LOG.TXT  README.md  camera_settings.yml  camera_settings_ral.yml  floor.xml  homotopy_demo.rrd  interactive_viewer.ui  intvel.xml  materials.xml  mjmodel.xml  mjregrasping.rosinstall  package.xml  requirements.txt  rope.xml  setup.py  transform.yaml  untangle.xml  val_husky.xml  val_scene.xml
cfg/: Params.cfg
dependencies/: CMakeLists.txt
launch/: demo.launch
meshes/: A35.blend  A35_BRACKET_centered.stl  A35_BRACKET_simplified.blend  A35_BRACKET_simplified.blend1  A35_DRIVE_centered.stl  A35_DRIVE_simplified.mtl  Drive56_mujoco_centered.stl  Drive56_simplified.blend  Drive56_simplified.stl  FOREARM_BRACKET_centered.stl  FOREARM_BRACKET_simplified.blend  MK4_HT_centered.stl  MK4_HT_simplified.blend  MK4_LT_centered.stl  MK4_LT_simplified.blend  MK4_MT_centered.stl  PEDESTAL_ASSEMBLY_centered.stl  PEDESTAL_ASSEMBLY_simplified.blend  PINCER_HOUSING2_centered.stl  PINCER_HOUSING_centered.stl  PROXIMAL_TUBE_centered.stl  SHOULDER_BRACKET_centered.stl  TORSO_simplified.blend  TORSO_simplified.stl  ark_lidar_centered.stl  ark_lidar_simplified.blend  ark_lidar_simplified.stl  base_link.stl  base_link_centered.stl  base_link_simplified.stl  box.stl  bumper.stl  bumper_extension.stl  large_top_plate.stl  top_chassis.stl  top_plate.stl  top_plate_centered.stl  user_rail.stl  wheel_centered.stl  wheel_simplified.blend
models/: cable.xml  cable_harness_obstacles.xml  cable_harness_obstacles_scene.xml  cable_harness_scene.xml  cable_harness_skeleton.hjson  cc_sphere.xml  computer_rack.xml  computer_rack_scene.xml  computer_rack_skeleton.hjson  conq_eq_constraints.xml  conq_hose_scene.xml  drone_scene.xml  dynamic_grasp_demo.xml  floor.xml  hose.xml  hose_obstacles.xml  hose_obstacles_scene.xml  hose_obstacles_skeleton.hjson  humanoid_scene.xml  materials.xml  op3.xml  pull_scene.xml  pulling_scene.xml  real_obs.xml  real_obs_scene.xml  real_scene.xml  rope.xml  simple_conq.xml  simple_goal_sig_obstacles.xml  simple_goal_sig_obstacles_scene.xml  simple_goal_sig_scene.xml  stiff_wire.xml  test_ext.xml  threading_obstacles.xml  threading_obstacles_scene.xml  threading_scene.xml  threading_scene1.xml  tmp.xml  untangle_scene.xml  untangle_scene2.xml  (+3 more)
rviz/: mujoco.rviz
scripts/: cable_harness.py  cable_harness_baseline.py  cdcpd_torch_node.py  cdcpd_torch_node2.py  conq_hose.py  constructing_signature_fig.py  drone_example.py  drones_animation.py  dynamic_grasp_demo.py  magnetic_fields_demo.py  make_homotopy_results.py  make_tables.py  mjcf_scene_to_sdf.py  mjcf_scene_to_vg.py  mppi_brv.py  new_viewer.py  perf_rollout.py  pull.py  pulling.py  randomize_cable_harness.py  randomize_pulling.py  randomize_simple_goal_sig.py  randomize_threading.py  randomize_untangle.py  real_untangle.py  regrasp.py  segment_demo.py  sim_viewer.py  simple_goal_sig.py  test_external_force.py  test_inverse_control.py  test_move_to_joint_config.py  test_mppi.py  test_mppi_to_point.py  test_render.py  test_rope_and_grasping_physics.py  threading.py  threading1.py  threading_baseline.py  threading_cable.py  (+15 more)
sdfs/: cable_harness.sdf  cable_harness_args.txt  cable_harness_obstacles.sdf  cable_harness_obstacles_args.txt  computer_rack.sdf  computer_rack_args.txt  (+2 more)
(+347 files in other folders)
