<?xml version="1.0"?>
<package format="2">
  <name>mjregrasping</name>
  <version>0.0.0</version>
  <description>package</description>

  <maintainer email="peter@todo.todo">peter</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>arc_utilities</depend>
  <depend>rviz_voxelgrid_visuals</depend>
</package>
